# balls

./: README.md  build.sh  clean.sh  clippy.sh  format.sh  test.sh
client/: Cargo.toml
client/src/: lib.rs  state.rs
common/: Cargo.toml
common/src/: lib.rs  message.rs
server/: Cargo.toml
server/src/: main.rs  state.rs
windows/: build.bat  clean.bat  clippy.bat  format.bat  test.bat
www/: index.html  styles.css
