[package]
name = "client"
version = "0.1.0"
authors = ["Daniel Zduniak <dzduniak@gmail.com>"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"
js-utils = "0.1.2"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = "0.1.0"
mezzenger-websocket = "0.1.0"
web-sys = { version = "0.3.60", features = [
    "WebSocket",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "MouseEvent",
] }
log = "0.4.17"
console_log = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
